--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
@@ -24,7 +26,9 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
+    "typescript": "^5.5.3",
     "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "webpack": "^5.92.1"
   }
 }
