--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
     "typescript": "^5.5.3",
+    "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^5.3.1",
     "vite-tsconfig-paths": "^4.3.2",
     "webpack": "^5.92.1"
